added comment card

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,6 +12,7 @@ card01_title=Title
 
 fiorimoni=fiorimoni
 UserLoggedIn=Total Active Users
+ContactUs=Contact Us
 UserPerApp=Appviews Today by App
 DeviceType=Device Type
 BrowserTypes=Browser Types
