fixed the region card resizing issues

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -16,7 +16,7 @@ ContactUs=Contact Us
 UserPerApp=Appviews Today by App
 DeviceType=Device Type
 BrowserTypes=Browser Types
-Region=Region (mock-up)
+Region=Region
 Top5Errors=Top Errors
 TopUsers=Most Active Users Today
 AvgFioriAppLaunchTime= Average Loading Time
