--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -17,7 +17,7 @@ UserPerApp=Appviews Today by App
 DeviceType=Device Type
 BrowserTypes=Browser Types
 Region=Region
-VoE=App Feedback Results
+VoE=Voice of the Employee
 Top5Errors=Top Errors
 TopUsers=Most Active Users Today
 AvgFioriAppLaunchTime= Average Loading Time
