Added final Error objects

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -18,7 +18,7 @@ DeviceType=Device Type
 BrowserTypes=Browser Types
 Region=Region
 VoE=Voice of the Employee
-Top5Errors=Top Errors
+Top5Errors=Most Recent Errors
 TopUsers=Most Active Users Today
 AvgFioriAppLaunchTime= Average Loading Time
 #: 
